Fix social media icons wrap

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -325,7 +325,7 @@ h5 {
 
 .footer-links-social li {
   display: inline-block;
-  margin: 0 0.21em;
+  margin: 0 0.1em;
 }
 
 .footer-links-menu li {
